--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ Flask-Login==0.6.3
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
 greenlet==3.0.3
+gunicorn==22.0.0
 idna==3.7
 importlib-metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+packaging==24.0
 SQLAlchemy==2.0.29
 typing-extensions==4.11.0
 werkzeug==3.0.2
